# RFSN-CODING

./: .gitignore  CHANGELOG.md  Dockerfile  FEATURE_MODE.md  README.md  RELEASE_CHECKLIST.md  build_macos.sh  pyproject.toml  requirements-llm.txt  requirements.txt  rfsn_controller_build.code-workspace  verification_result.txt  verify_env.py
docs/: MIGRATION.md
rfsn_controller/: action_outcome_memory.py  allowlist_profiles.py  apt_whitelist.py  broadcaster.py  cli.py  clock.py  command_allowlist.py  command_normalizer.py  config.py  context.py  controller.py  e2b_sandbox.py  engram.py  eval_harness.py  evidence_export.py  evidence_pack.py  exec_utils.py  goals.py  incremental_testing.py  ingest_evidence.py  language_templates.py  llm_async.py  llm_deepseek.py  llm_ensemble.py  llm_gemini.py  model_validator.py  optimizations.py  parallel.py  parsers.py  patch_hygiene.py  performance.py  planner.py  policy.py  policy_bandit.py  project_detection.py  project_detector.py  prompt.py  repo_index.py  sandbox.py  security_hardening.py  (+13 more)
rfsn_controller/buildpacks/: __init__.py  base.py  dotnet_pack.py  go_pack.py  java_pack.py  node_pack.py  polyrepo_pack.py  python_pack.py  rust_pack.py
rfsn_dashboard/: __init__.py  main.py
rfsn_dashboard/static/: index.html
scripts/: test_parallel_llm.py  test_streaming.py
tests/: test_eval_harness.py  test_no_shell.py  test_planner.py  test_policy_bandit.py  test_prompt_upgrade.py  test_repo_index.py  test_v3.py  test_zero_trust_hardening.py
tests/integration/: test_quixbugs.py  test_quixbugs_direct.py
tests/unit/: test_release_sanity.py
